Fix details page on safari

--- a/src/app/deck-details/deck-details.component.css
+++ b/src/app/deck-details/deck-details.component.css
@@ -5,6 +5,11 @@
 .content {
   column-count: 1;
   column-gap: 1em;
+  position: relative;
+}
+
+.item {
+  position: relative;
 }
 
 @media only screen and (min-width: 480px) {
